--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <section id="services">
     <div class="wrapper">
       <header>
-        <img src="./assets/imagensInicialLogo.png" alt="PROLAM" />
+        <a class="button3" href="https://www.prolam.com.br" target="_blank">
+          <img src="./assets/imagensInicialLogo.png" alt="PROLAM" />
+        </a>
         </br>
         </br>
         <h3>PROLAM CARDÁPIO SEMANAL</h3>
