--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
   <section id="services">
     <div class="wrapper">
       <header>
-        <a class="button3" href="https://www.prolam.com.br" target="_blank">
+        <!-- <a class="button3" href="https://www.prolam.com.br" target="_blank">
+          <img src="./assets/imagensInicialLogo.png" alt="PROLAM" />
+        </a> -->
+        <a >
           <img src="./assets/imagensInicialLogo.png" alt="PROLAM" />
         </a>
         </br>
         </br>
-        <h3>PROLAM CARDÁPIO SEMANAL</h3>
+        <h3>CARDÁPIO SEMANAL</h3>
         </br>
       </header>
       <div class="content">
