--- a/index.html
+++ b/index.html
@@ -18,13 +18,8 @@
         <!-- <a class="button3" href="https://www.prolam.com.br" target="_blank">
           <img src="./assets/imagensInicialLogo.png" alt="PROLAM" />
         </a> -->
-        <a >
-          <img src="./assets/imagensInicialLogo.png" alt="PROLAM" />
-        </a>
-        </br>
-        </br>
-        <h3>CARDÁPIO SEMANAL</h3>
-        </br>
+        <a><img src="./assets/imagensInicialLogo.png" alt="PROLAM" /></a></br></br>
+        <h3>CARDÁPIO SEMANAL</h3></br>
       </header>
       <div class="content">
         <div class="cards">
@@ -39,11 +34,44 @@
               </a>
             </h3>
             <p>
-            <P style="font-weight: bold;">DESJEJUM:</P> PÃO FRANCÊS / MASSA FINA / QUEIJO E PRESUNTO </p> </br>
+            <P class="desjejum">DESJEJUM:</P>
+            <ul>
+              <li> PÃO FRANCÊS </li>
+              <li> MASSA FINA </li>
+              <li> SOPA DE FEIJÃO </li>
+              <!-- <li> QUEIJO E PRESUNTO </li> -->
+              <!-- <li> BANANA COZIDA </li> -->
+              <!-- <li> OVO FRITO </li> -->
+              <!-- <li> MOLHO DE SALSICHA </li> -->
+              <!-- <li> BOLO </li> -->
+            </ul>
+            </p></br>
             <p>
-            <P style="font-weight: bold;">ALMOÇO:</P> BIFE ACEBOLADO / DOBRADINHA </p> </br>
+            <P class="desjejum">ALMOÇO:</P>
+            <ul>
+              <li> BIFE ACEBOLADO </li>
+              <li> DOBRADINHA </li>
+              <!-- <li> PEIXE FRITO </li> -->
+              <!-- <li> PICADINHO RICO </li> -->
+              <!-- <li> ISCA DE CARNE </li> -->
+              <!-- <li> LINGUIÇA DE FRANGO </li> -->
+              <!-- <li> BIFE AO MOLHO </li> -->
+              <!-- <li> ISCA DE CALABRESA </li> -->
+              <!-- <li> FRANGO GUISADO </li> -->
+              <!-- <li> FRANGO FRITO </li> -->
+              <!-- <li> PANQUECAS DE CARNE </li> -->
+              <!-- <li> ALMOÇO ESPECIAL </li> -->
+            </ul>
+            <p></br>
             <p>
-            <P style="font-weight: bold;">LANCHE:</P> BAQUETE </p>
+            <P class="desjejum">LANCHE:</P>
+            <ul>
+              <li> BAQUETE </li>
+              <!-- <li> MISTO QUENTE </li> -->
+              <!-- <li> SALGADO </li> -->
+              <!-- <li> BOLO </li> -->
+            </ul>
+            </p>
           </div>
 
           <div class="card">
@@ -56,11 +84,44 @@
               </a>
             </h3>
             <p>
-            <P style="font-weight: bold;">DESJEJUM:</P> PÃO FRANCÊS / MASSA FINA / MOLHO DE SALSICHA </p> </br>
+            <P class="desjejum">DESJEJUM:</P>
+            <ul>
+              <li> PÃO FRANCÊS </li>
+              <li> MASSA FINA </li>
+              <!-- <li> SOPA DE FEIJÃO </li> -->
+              <li> QUEIJO E PRESUNTO </li>
+              <!-- <li> BANANA COZIDA </li> -->
+              <!-- <li> OVO FRITO </li> -->
+              <!-- <li> MOLHO DE SALSICHA </li> -->
+              <!-- <li> BOLO </li> -->
+            </ul>
+            </p></br>
             <p>
-            <P style="font-weight: bold;">ALMOÇO:</P> FRANGO FRITO / PANQUECAS DE CARNE </p> </br>
+            <P class="desjejum">ALMOÇO:</P>
+            <ul>
+              <!-- <li> BIFE ACEBOLADO </li> -->
+              <!-- <li> DOBRADINHA </li> -->
+              <!-- <li> PEIXE FRITO </li> -->
+              <!-- <li> PICADINHO RICO </li> -->
+              <li> ISCA DE CARNE </li>
+              <!-- <li> LINGUIÇA DE FRANGO </li> -->
+              <!-- <li> BIFE AO MOLHO </li> -->
+              <!-- <li> ISCA DE CALABRESA </li> -->
+              <li> FRANGO GUISADO </li>
+              <!-- <li> FRANGO FRITO </li> -->
+              <!-- <li> PANQUECAS DE CARNE </li> -->
+              <!-- <li> ALMOÇO ESPECIAL </li> -->
+            </ul>
+            <p></br>
             <p>
-            <P style="font-weight: bold;">LANCHE:</P> MISTO QUENTE </p>
+            <P class="desjejum">LANCHE:</P>
+            <ul>
+              <li> BAQUETE </li>
+              <li> MISTO QUENTE </li>
+              <li> SALGADO </li>
+              <li> BOLO </li>
+            </ul>
+            </p>
           </div>
 
           <div class="card">
@@ -73,11 +134,44 @@
               </a>
             </h3>
             <p>
-            <P style="font-weight: bold;">DESJEJUM:</P> PÃO FRANCÊS / MASSA FINA / BANANA COZIDA </p> </br>
+            <P class="desjejum">DESJEJUM:</P>
+            <ul>
+              <li> PÃO FRANCÊS </li>
+              <li> MASSA FINA </li>
+              <!-- <li> SOPA DE FEIJÃO </li> -->
+              <!-- <li> QUEIJO E PRESUNTO </li> -->
+              <!-- <li> BANANA COZIDA </li> -->
+              <!-- <li> OVO FRITO </li> -->
+              <li> MOLHO DE SALSICHA </li>
+              <!-- <li> BOLO </li> -->
+            </ul>
+            </p></br>
             <p>
-            <P style="font-weight: bold;">ALMOÇO:</P> PEIXE FRITO / PICADINHO RICO </p> </br>
+            <P class="desjejum">ALMOÇO:</P>
+            <ul>
+              <!-- <li> BIFE ACEBOLADO </li> -->
+              <!-- <li> DOBRADINHA </li> -->
+              <!-- <li> PEIXE FRITO </li> -->
+              <!-- <li> PICADINHO RICO </li> -->
+              <!-- <li> ISCA DE CARNE </li> -->
+              <!-- <li> LINGUIÇA DE FRANGO </li> -->
+              <!-- <li> BIFE AO MOLHO </li> -->
+              <!-- <li> ISCA DE CALABRESA </li> -->
+              <!-- <li> FRANGO GUISADO </li> -->
+              <li> FRANGO FRITO </li>
+              <li> PANQUECAS DE CARNE </li>
+              <!-- <li> ALMOÇO ESPECIAL </li> -->
+            </ul>
+            <p></br>
             <p>
-            <P style="font-weight: bold;">LANCHE:</P> BAQUETE </p>
+            <P class="desjejum">LANCHE:</P>
+            <ul>
+              <!-- <li> BAQUETE </li> -->
+              <li> MISTO QUENTE </li>
+              <!-- <li> SALGADO </li> -->
+              <!-- <li> BOLO </li> -->
+            </ul>
+            </p>
           </div>
 
           <div class="card">
@@ -90,11 +184,44 @@
               </a>
             </h3>
             <p>
-            <P style="font-weight: bold;">DESJEJUM:</P> PÃO FRANCÊS / MASSA FINA / OVO FRITO </p> </br>
+            <P class="desjejum">DESJEJUM:</P>
+            <ul>
+              <li> PÃO FRANCÊS </li>
+              <li> MASSA FINA </li>
+              <!-- <li> SOPA DE FEIJÃO </li> -->
+              <!-- <li> QUEIJO E PRESUNTO </li> -->
+              <li> BANANA COZIDA </li>
+              <!-- <li> OVO FRITO </li> -->
+              <!-- <li> MOLHO DE SALSICHA </li> -->
+              <!-- <li> BOLO </li> -->
+            </ul>
+            </p></br>
             <p>
-            <P style="font-weight: bold;">ALMOÇO:</P> ALMOÇO ESPECIAL </p> </br>
+            <P class="desjejum">ALMOÇO:</P>
+            <ul>
+              <!-- <li> BIFE ACEBOLADO </li> -->
+              <!-- <li> DOBRADINHA </li> -->
+              <!-- <li> PEIXE FRITO </li> -->
+              <li> PICADINHO RICO </li>
+              <!-- <li> ISCA DE CARNE </li> -->
+              <!-- <li> LINGUIÇA DE FRANGO </li> -->
+              <!-- <li> BIFE AO MOLHO </li> -->
+              <!-- <li> ISCA DE CALABRESA </li> -->
+              <!-- <li> FRANGO GUISADO </li> -->
+              <!-- <li> FRANGO FRITO </li> -->
+              <!-- <li> PANQUECAS DE CARNE </li> -->
+              <!-- <li> ALMOÇO ESPECIAL </li> -->
+            </ul>
+            <p></br>
             <p>
-            <P style="font-weight: bold;">LANCHE:</P> BOLO </p>
+            <P class="desjejum">LANCHE:</P>
+            <ul>
+              <li> BAQUETE </li>
+              <!-- <li> MISTO QUENTE </li> -->
+              <!-- <li> SALGADO </li> -->
+              <!-- <li> BOLO </li> -->
+            </ul>
+            </p>
           </div>
 
           <div class="card">
@@ -107,11 +234,44 @@
               </a>
             </h3>
             <p>
-            <P style="font-weight: bold;">DESJEJUM:</P> PÃO FRANCÊS / MASSA FINA / BOLO </p> </br>
+            <P class="desjejum">DESJEJUM:</P>
+            <ul>
+              <li> PÃO FRANCÊS </li>
+              <li> MASSA FINA </li>
+              <!-- <li> SOPA DE FEIJÃO </li> -->
+              <!-- <li> QUEIJO E PRESUNTO </li> -->
+              <!-- <li> BANANA COZIDA </li> -->
+              <li> OVO FRITO </li>
+              <!-- <li> MOLHO DE SALSICHA </li> -->
+              <!-- <li> BOLO </li> -->
+            </ul>
+            </p></br>
             <p>
-            <P style="font-weight: bold;">ALMOÇO:</P> ISCA DE CARNE / LINGUIÇA DE FRANGO </p> </br>
+            <P class="desjejum">ALMOÇO:</P>
+            <ul>
+              <!-- <li> BIFE ACEBOLADO </li> -->
+              <!-- <li> DOBRADINHA </li> -->
+              <!-- <li> PEIXE FRITO </li> -->
+              <!-- <li> PICADINHO RICO </li> -->
+              <!-- <li> ISCA DE CARNE </li> -->
+              <!-- <li> LINGUIÇA DE FRANGO </li> -->
+              <!-- <li> BIFE AO MOLHO </li> -->
+              <!-- <li> ISCA DE CALABRESA </li> -->
+              <!-- <li> FRANGO GUISADO </li> -->
+              <!-- <li> FRANGO FRITO </li> -->
+              <!-- <li> PANQUECAS DE CARNE </li> -->
+              <li> ALMOÇO ESPECIAL </li>
+            </ul>
+            <p></br>
             <p>
-            <P style="font-weight: bold;">LANCHE:</P> SALGADO </p>
+            <P class="desjejum">LANCHE:</P>
+            <ul>
+              <!-- <li> BAQUETE </li> -->
+              <!-- <li> MISTO QUENTE </li> -->
+              <!-- <li> SALGADO </li> -->
+              <li> BOLO </li>
+            </ul>
+            </p>
           </div>
 
           <div class="card">
@@ -124,11 +284,44 @@
               </a>
             </h3>
             <p>
-            <P style="font-weight: bold;">DESJEJUM:</P> PÃO FRANCÊS / MASSA FINA / OVO FRITO </p> </br>
+            <P class="desjejum">DESJEJUM:</P>
+            <ul>
+              <li> PÃO FRANCÊS </li>
+              <li> MASSA FINA </li>
+              <!-- <li> SOPA DE FEIJÃO </li> -->
+              <!-- <li> QUEIJO E PRESUNTO </li> -->
+              <!-- <li> BANANA COZIDA </li> -->
+              <!-- <li> OVO FRITO </li> -->
+              <!-- <li> MOLHO DE SALSICHA </li> -->
+              <li> BOLO </li>
+            </ul>
+            </p></br>
             <p>
-            <P style="font-weight: bold;">ALMOÇO:</P> BIFE AO MOLHO / ISCA DE CALABRESA </p> </br>
+            <P class="desjejum">ALMOÇO:</P>
+            <ul>
+              <!-- <li> BIFE ACEBOLADO </li> -->
+              <!-- <li> DOBRADINHA </li> -->
+              <!-- <li> PEIXE FRITO </li> -->
+              <!-- <li> PICADINHO RICO </li> -->
+              <!-- <li> ISCA DE CARNE </li> -->
+              <li> LINGUIÇA DE FRANGO </li>
+              <!-- <li> BIFE AO MOLHO </li> -->
+              <!-- <li> ISCA DE CALABRESA </li> -->
+              <!-- <li> FRANGO GUISADO </li> -->
+              <!-- <li> FRANGO FRITO </li> -->
+              <!-- <li> PANQUECAS DE CARNE </li> -->
+              <!-- <li> ALMOÇO ESPECIAL </li> -->
+            </ul>
+            <p></br>
             <p>
-            <P style="font-weight: bold;">LANCHE:</P> MISTO QUENTE </p>
+            <P class="desjejum">LANCHE:</P>
+            <ul>
+              <!-- <li> BAQUETE </li> -->
+              <!-- <li> MISTO QUENTE </li> -->
+              <li> SALGADO </li>
+              <!-- <li> BOLO </li> -->
+            </ul>
+            </p>
           </div>
 
           <div class="card">
@@ -142,11 +335,44 @@
               </a>
             </h3>
             <p>
-            <P style="font-weight: bold;">DESJEJUM:</P> PÃO FRANCÊS / MASSA FINA / OVO FRITO </p> </br>
+            <P class="desjejum">DESJEJUM:</P>
+            <ul>
+              <li> PÃO FRANCÊS </li>
+              <li> MASSA FINA </li>
+              <!-- <li> SOPA DE FEIJÃO </li> -->
+              <!-- <li> QUEIJO E PRESUNTO </li> -->
+              <!-- <li> BANANA COZIDA </li> -->
+              <li> OVO FRITO </li>
+              <!-- <li> MOLHO DE SALSICHA </li> -->
+              <!-- <li> BOLO </li> -->
+            </ul>
+            </p></br>
             <p>
-            <P style="font-weight: bold;">ALMOÇO:</P> BIFE AO MOLHO / ISCA DE CALABRESA </p> </br>
+            <P class="desjejum">ALMOÇO:</P>
+            <ul>
+              <!-- <li> BIFE ACEBOLADO </li> -->
+              <!-- <li> DOBRADINHA </li> -->
+              <!-- <li> PEIXE FRITO </li> -->
+              <!-- <li> PICADINHO RICO </li> -->
+              <!-- <li> ISCA DE CARNE </li> -->
+              <!-- <li> LINGUIÇA DE FRANGO </li> -->
+              <li> BIFE AO MOLHO </li>
+              <li> ISCA DE CALABRESA </li>
+              <!-- <li> FRANGO GUISADO </li> -->
+              <!-- <li> FRANGO FRITO </li> -->
+              <!-- <li> PANQUECAS DE CARNE </li> -->
+              <!-- <li> ALMOÇO ESPECIAL </li> -->
+            </ul>
+            <p></br>
             <p>
-            <P style="font-weight: bold;">LANCHE:</P> MISTO QUENTE </p>
+            <P class="desjejum">LANCHE:</P>
+            <ul>
+              <!-- <li> BAQUETE </li> -->
+              <li> MISTO QUENTE </li>
+              <!-- <li> SALGADO </li> -->
+              <!-- <li> BOLO </li> -->
+            </ul>
+            </p>
           </div>
 
           <div class="card" style="background-color:var(--bg-light); border: #f6f8f7"> </div>
