--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
           <div class="card">
             <a class="Proficional_Academico" target="_blank" href="#services">
-              <img width="80" height="24" src="./assets/segunda.png" alt="PROLAM" />
+              <img width="280" height="28" src="./assets/segunda.png" alt="PROLAM" />
             </a>
             <h3>
               <a class="Proficional_Academico" target="_blank" href="#services">
@@ -39,6 +39,7 @@
               <li> PÃO FRANCÊS </li>
               <li> MASSA FINA </li>
               <li> SOPA DE FEIJÃO </li>
+              <li> CAFÉ / LEITE </li>
               <!-- <li> QUEIJO E PRESUNTO </li> -->
               <!-- <li> BANANA COZIDA </li> -->
               <!-- <li> OVO FRITO </li> -->
@@ -49,11 +50,11 @@
             <p>
             <P class="desjejum">ALMOÇO:</P>
             <ul>
-              <li> BIFE ACEBOLADO </li>
-              <li> DOBRADINHA </li>
-              <!-- <li> PEIXE FRITO </li> -->
+              <!-- <li> BIFE ACEBOLADO </li> -->
+              <!-- <li> DOBRADINHA </li> -->
+              <li> TAMBAQUI FRITO </li>
               <!-- <li> PICADINHO RICO </li> -->
-              <!-- <li> ISCA DE CARNE </li> -->
+              <li> ISCA DE CARNE </li>
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
@@ -61,22 +62,24 @@
               <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> ALMOÇO ESPECIAL </li> -->
+              <li> SUCO </li>
             </ul>
             <p></br>
             <p>
             <P class="desjejum">LANCHE:</P>
             <ul>
-              <li> BAQUETE </li>
+              <!-- <li> BAQUETE </li> -->
               <!-- <li> MISTO QUENTE </li> -->
               <!-- <li> SALGADO </li> -->
               <!-- <li> BOLO </li> -->
+              <li> BOLACHA / IOGURTE </li>
             </ul>
             </p>
           </div>
 
           <div class="card">
             <a class="Proficional_Academico" target="_blank" href="#services">
-              <img width="70" height="24" src="./assets/terca.png" alt="PROLAM" />
+              <img width="280" height="28" src="./assets/terca.png" alt="PROLAM" />
             </a>
             <h3>
               <a class="Proficional_Academico" target="_blank" href="#services">
@@ -94,6 +97,7 @@
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> BOLO </li> -->
+              <li> CAFÉ / LEITE </li>
             </ul>
             </p></br>
             <p>
@@ -103,7 +107,8 @@
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> PEIXE FRITO </li> -->
               <!-- <li> PICADINHO RICO </li> -->
-              <li> ISCA DE CARNE </li>
+              <!-- <li> ISCA DE CARNE </li> -->
+              <li> ISCA DE FIGADO </li>
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
@@ -111,22 +116,23 @@
               <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> ALMOÇO ESPECIAL </li> -->
+              <li> SUCO </li>
             </ul>
             <p></br>
             <p>
             <P class="desjejum">LANCHE:</P>
             <ul>
-              <li> BAQUETE </li>
-              <li> MISTO QUENTE </li>
+              <!-- <li> BAQUETE </li> -->
+              <!-- <li> MISTO QUENTE </li> -->
               <li> SALGADO </li>
-              <li> BOLO </li>
+              <!-- <li> BOLO </li> -->
             </ul>
             </p>
           </div>
 
           <div class="card">
             <a class="Proficional_Academico" target="_blank" href="#services">
-              <img width="70" height="24" src="./assets/quarta.png" alt="PROLAM" />
+              <img width="280" height="28" src="./assets/quarta.png" alt="PROLAM" />
             </a>
             <h3>
               <a class="Proficional_Academico" target="_blank" href="#services">
@@ -142,8 +148,9 @@
               <!-- <li> QUEIJO E PRESUNTO </li> -->
               <!-- <li> BANANA COZIDA </li> -->
               <!-- <li> OVO FRITO </li> -->
-              <li> MOLHO DE SALSICHA </li>
-              <!-- <li> BOLO </li> -->
+              <!-- <li> MOLHO DE SALSICHA </li> -->
+              <li> BOLO </li>
+              <li> CAFÉ / LEITE </li>
             </ul>
             </p></br>
             <p>
@@ -158,16 +165,20 @@
               <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> FRANGO GUISADO </li> -->
-              <li> FRANGO FRITO </li>
-              <li> PANQUECAS DE CARNE </li>
+              <!-- <li> FRANGO FRITO </li> -->
+              <li> FRANGO ASSADO </li>
+              <li> OVO E CALABRESA </li>
+              <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> ALMOÇO ESPECIAL </li> -->
+              <li> SUCO </li>
             </ul>
             <p></br>
             <p>
             <P class="desjejum">LANCHE:</P>
             <ul>
               <!-- <li> BAQUETE </li> -->
-              <li> MISTO QUENTE </li>
+              <!-- <li> MISTO QUENTE </li> -->
+              <li> X SALADA </li>
               <!-- <li> SALGADO </li> -->
               <!-- <li> BOLO </li> -->
             </ul>
@@ -176,7 +187,7 @@
 
           <div class="card">
             <a class="Proficional_Academico" target="_blank" href="#services">
-              <img width="70" height="24" src="./assets/quinta.png" alt="PROLAM" />
+              <img width="280" height="28" src="./assets/quinta.png" alt="PROLAM" />
             </a>
             <h3>
               <a class="Proficional_Academico" target="_blank" href="#services">
@@ -190,60 +201,12 @@
               <li> MASSA FINA </li>
               <!-- <li> SOPA DE FEIJÃO </li> -->
               <!-- <li> QUEIJO E PRESUNTO </li> -->
-              <li> BANANA COZIDA </li>
-              <!-- <li> OVO FRITO </li> -->
-              <!-- <li> MOLHO DE SALSICHA </li> -->
-              <!-- <li> BOLO </li> -->
-            </ul>
-            </p></br>
-            <p>
-            <P class="desjejum">ALMOÇO:</P>
-            <ul>
-              <!-- <li> BIFE ACEBOLADO </li> -->
-              <!-- <li> DOBRADINHA </li> -->
-              <!-- <li> PEIXE FRITO </li> -->
-              <li> PICADINHO RICO </li>
-              <!-- <li> ISCA DE CARNE </li> -->
-              <!-- <li> LINGUIÇA DE FRANGO </li> -->
-              <!-- <li> BIFE AO MOLHO </li> -->
-              <!-- <li> ISCA DE CALABRESA </li> -->
-              <!-- <li> FRANGO GUISADO </li> -->
-              <!-- <li> FRANGO FRITO </li> -->
-              <!-- <li> PANQUECAS DE CARNE </li> -->
-              <!-- <li> ALMOÇO ESPECIAL </li> -->
-            </ul>
-            <p></br>
-            <p>
-            <P class="desjejum">LANCHE:</P>
-            <ul>
-              <li> BAQUETE </li>
-              <!-- <li> MISTO QUENTE </li> -->
-              <!-- <li> SALGADO </li> -->
-              <!-- <li> BOLO </li> -->
-            </ul>
-            </p>
-          </div>
-
-          <div class="card">
-            <a class="Proficional_Academico" target="_blank" href="#services">
-              <img width="70" height="24" src="./assets/sexta.png" alt="PROLAM" />
-            </a>
-            <h3>
-              <a class="Proficional_Academico" target="_blank" href="#services">
-                30/12
-              </a>
-            </h3>
-            <p>
-            <P class="desjejum">DESJEJUM:</P>
-            <ul>
-              <li> PÃO FRANCÊS </li>
-              <li> MASSA FINA </li>
-              <!-- <li> SOPA DE FEIJÃO </li> -->
-              <!-- <li> QUEIJO E PRESUNTO </li> -->
               <!-- <li> BANANA COZIDA </li> -->
-              <li> OVO FRITO </li>
+              <!-- <li> OVO FRITO </li> -->
+              <li> OVO COZIDO </li>
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> BOLO </li> -->
+              <li> CAFÉ / LEITE </li>
             </ul>
             </p></br>
             <p>
@@ -261,6 +224,7 @@
               <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <li> ALMOÇO ESPECIAL </li>
+              <li> REFRIGERANTE </li>
             </ul>
             <p></br>
             <p>
@@ -269,14 +233,71 @@
               <!-- <li> BAQUETE </li> -->
               <!-- <li> MISTO QUENTE </li> -->
               <!-- <li> SALGADO </li> -->
-              <li> BOLO </li>
+              <!-- <li> BOLO </li> -->
+              <li> MINGAU DE MUNGUNZA </li>
             </ul>
             </p>
           </div>
 
           <div class="card">
             <a class="Proficional_Academico" target="_blank" href="#services">
-              <img width="70" height="24" src="./assets/sabado.png" alt="PROLAM" />
+              <img width="280" height="28" src="./assets/sexta.png" alt="PROLAM" />
+            </a>
+            <h3>
+              <a class="Proficional_Academico" target="_blank" href="#services">
+                30/12
+              </a>
+            </h3>
+            <p>
+            <P class="desjejum">DESJEJUM:</P>
+            <ul>
+              <li> PÃO FRANCÊS </li>
+              <li> MASSA FINA </li>
+              <!-- <li> SOPA DE FEIJÃO </li> -->
+              <!-- <li> QUEIJO E PRESUNTO </li> -->
+              <!-- <li> BANANA COZIDA </li> -->
+              <!-- <li> OVO FRITO </li> -->
+              <li> QUARENTÃO </li>
+              <!-- <li> MOLHO DE SALSICHA </li> -->
+              <!-- <li> BOLO </li> -->
+              <li> CAFÉ / LEITE </li>
+            </ul>
+            </p></br>
+            <p>
+            <P class="desjejum">ALMOÇO:</P>
+            <ul>
+              <!-- <li> BIFE ACEBOLADO </li> -->
+              <!-- <li> DOBRADINHA </li> -->
+              <!-- <li> PEIXE FRITO </li> -->
+              <!-- <li> PICADINHO RICO </li> -->
+              <!-- <li> ISCA DE CARNE </li> -->
+              <li> ISCA DE FRANGO </li>
+              <li> CARNE AO MOLHO </li>
+              <!-- <li> LINGUIÇA DE FRANGO </li> -->
+              <!-- <li> BIFE AO MOLHO </li> -->
+              <!-- <li> ISCA DE CALABRESA </li> -->
+              <!-- <li> FRANGO GUISADO </li> -->
+              <!-- <li> FRANGO FRITO </li> -->
+              <!-- <li> PANQUECAS DE CARNE </li> -->
+              <!-- <li> ALMOÇO ESPECIAL </li> -->
+              <li> SUCO </li>
+            </ul>
+            <p></br>
+            <p>
+            <P class="desjejum">LANCHE:</P>
+            <ul>
+              <!-- <li> BAQUETE </li> -->
+              <!-- <li> MISTO QUENTE </li> -->
+              <!-- <li> SALGADO </li> -->
+              <!-- <li> BOLO </li> -->
+              <li> BISCOITO RECHEADO </li>
+            </ul>
+            </p>
+          </div>
+
+          <div class="card">
+            <a class="Proficional_Academico" target="_blank" href="#services">
+              <img width="280" height="28" src="./assets/sabado.png" alt="PROLAM" />
             </a>
             <h3>
               <a class="Proficional_Academico" target="_blank" href="#services">
@@ -293,7 +314,9 @@
               <!-- <li> BANANA COZIDA </li> -->
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
-              <li> BOLO </li>
+              <!-- <li> BOLO </li> -->
+              <li> FRUTA </li>
+              <li> CAFÉ / LEITE </li>
             </ul>
             </p></br>
             <p>
@@ -303,7 +326,7 @@
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> PEIXE FRITO </li> -->
               <!-- <li> PICADINHO RICO </li> -->
-              <!-- <li> ISCA DE CARNE </li> -->
+              <li> ISCA DE CARNE </li>
               <li> LINGUIÇA DE FRANGO </li>
               <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
@@ -311,6 +334,7 @@
               <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> ALMOÇO ESPECIAL </li> -->
+              <li> SUCO </li>
             </ul>
             <p></br>
             <p>
@@ -318,15 +342,15 @@
             <ul>
               <!-- <li> BAQUETE </li> -->
               <!-- <li> MISTO QUENTE </li> -->
-              <li> SALGADO </li>
-              <!-- <li> BOLO </li> -->
+              <!-- <li> SALGADO </li> -->
+              <li> BOLO </li>
             </ul>
             </p>
           </div>
 
           <div class="card">
             <a class="Proficional_Academico" target="_blank" href="#services">
-              <img width="70" height="24" src="./assets/domingo.png" alt="PROLAM" />
+              <img width="280" height="28" src="./assets/domingo.png" alt="PROLAM" />
             </a>
 
             <h3>
@@ -345,6 +369,7 @@
               <li> OVO FRITO </li>
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> BOLO </li> -->
+              <li> CAFÉ / LEITE </li>
             </ul>
             </p></br>
             <p>
@@ -355,13 +380,15 @@
               <!-- <li> PEIXE FRITO </li> -->
               <!-- <li> PICADINHO RICO </li> -->
               <!-- <li> ISCA DE CARNE </li> -->
+              <li> ISCA DE FIGADO </li>
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <li> BIFE AO MOLHO </li>
-              <li> ISCA DE CALABRESA </li>
+              <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> FRANGO GUISADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> ALMOÇO ESPECIAL </li> -->
+              <li> SUCO </li>
             </ul>
             <p></br>
             <p>
