--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
             </a>
             <h3>
               <a class="Proficional_Academico" target="_blank" href="#services">
-                26/12
+                02/01
               </a>
             </h3>
             <p>
             <P class="desjejum">DESJEJUM:</P>
             <ul>
               <li> PÃO FRANCÊS </li>
-              <li> MASSA FINA </li>
-              <li> SOPA DE FEIJÃO </li>
+              <li> PÃO MASSA FINA </li>
               <li> CAFÉ / LEITE </li>
+              <li> SOPA DE FEIJÃO </li>
               <!-- <li> QUEIJO E PRESUNTO </li> -->
               <!-- <li> BANANA COZIDA </li> -->
               <!-- <li> OVO FRITO </li> -->
@@ -50,14 +50,14 @@
             <p>
             <P class="desjejum">ALMOÇO:</P>
             <ul>
+              <li> BIFE AO MOLHO </li>
+              <li> ISCA DE CALABRESA </li>
+              <!-- <li> ISCA DE CARNE </li> -->
               <!-- <li> BIFE ACEBOLADO </li> -->
               <!-- <li> DOBRADINHA </li> -->
-              <li> TAMBAQUI FRITO </li>
+              <!-- <li> TAMBAQUI FRITO </li> -->
               <!-- <li> PICADINHO RICO </li> -->
-              <li> ISCA DE CARNE </li>
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
-              <!-- <li> BIFE AO MOLHO </li> -->
-              <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> FRANGO GUISADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
@@ -68,11 +68,11 @@
             <p>
             <P class="desjejum">LANCHE:</P>
             <ul>
-              <!-- <li> BAQUETE </li> -->
+              <li> BAQUETE </li>
               <!-- <li> MISTO QUENTE </li> -->
               <!-- <li> SALGADO </li> -->
               <!-- <li> BOLO </li> -->
-              <li> BOLACHA / IOGURTE </li>
+              <!-- <li> BOLACHA / IOGURTE </li> -->
             </ul>
             </p>
           </div>
@@ -83,21 +83,22 @@
             </a>
             <h3>
               <a class="Proficional_Academico" target="_blank" href="#services">
-                27/12
+                03/01
               </a>
             </h3>
             <p>
             <P class="desjejum">DESJEJUM:</P>
             <ul>
               <li> PÃO FRANCÊS </li>
-              <li> MASSA FINA </li>
+              <li> PÃO MASSA FINA </li>
+              <li> CAFÉ / LEITE </li>
               <!-- <li> SOPA DE FEIJÃO </li> -->
-              <li> QUEIJO E PRESUNTO </li>
+              <!-- <li> QUEIJO E PRESUNTO </li> -->
               <!-- <li> BANANA COZIDA </li> -->
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> BOLO </li> -->
-              <li> CAFÉ / LEITE </li>
+              <li> PUPUNHA </li>
             </ul>
             </p></br>
             <p>
@@ -106,14 +107,14 @@
               <!-- <li> BIFE ACEBOLADO </li> -->
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> PEIXE FRITO </li> -->
-              <!-- <li> PICADINHO RICO </li> -->
+              <li> PICADINHO RICO </li>
               <!-- <li> ISCA DE CARNE </li> -->
-              <li> ISCA DE FIGADO </li>
+              <!-- <li> ISCA DE FIGADO </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
-              <li> FRANGO GUISADO </li>
-              <!-- <li> FRANGO FRITO </li> -->
+              <!-- <li> FRANGO GUISADO </li> -->
+              <li> FRANGO FRITO </li>
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> ALMOÇO ESPECIAL </li> -->
               <li> SUCO </li>
@@ -124,8 +125,8 @@
             <ul>
               <!-- <li> BAQUETE </li> -->
               <!-- <li> MISTO QUENTE </li> -->
-              <li> SALGADO </li>
-              <!-- <li> BOLO </li> -->
+              <!-- <li> SALGADO </li> -->
+              <li> BOLO </li>
             </ul>
             </p>
           </div>
@@ -136,27 +137,28 @@
             </a>
             <h3>
               <a class="Proficional_Academico" target="_blank" href="#services">
-                28/12
+                04/01
               </a>
             </h3>
             <p>
             <P class="desjejum">DESJEJUM:</P>
             <ul>
               <li> PÃO FRANCÊS </li>
-              <li> MASSA FINA </li>
+              <li> PÃO MASSA FINA </li>
+              <li> CAFÉ / LEITE </li>
               <!-- <li> SOPA DE FEIJÃO </li> -->
-              <!-- <li> QUEIJO E PRESUNTO </li> -->
+              <li> QUEIJO E PRESUNTO </li>
               <!-- <li> BANANA COZIDA </li> -->
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
-              <li> BOLO </li>
-              <li> CAFÉ / LEITE </li>
+              <!-- <li> BOLO </li> -->
             </ul>
             </p></br>
             <p>
             <P class="desjejum">ALMOÇO:</P>
             <ul>
               <!-- <li> BIFE ACEBOLADO </li> -->
+              <li> ESCONDIDINHO DE FRIOS </li>
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> PEIXE FRITO </li> -->
               <!-- <li> PICADINHO RICO </li> -->
@@ -164,10 +166,11 @@
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
+              <li> ISCA DE CARNE </li>
               <!-- <li> FRANGO GUISADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
-              <li> FRANGO ASSADO </li>
-              <li> OVO E CALABRESA </li>
+              <!-- <li> FRANGO ASSADO </li> -->
+              <!-- <li> OVO E CALABRESA </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> ALMOÇO ESPECIAL </li> -->
               <li> SUCO </li>
@@ -178,9 +181,10 @@
             <ul>
               <!-- <li> BAQUETE </li> -->
               <!-- <li> MISTO QUENTE </li> -->
-              <li> X SALADA </li>
+              <!-- <li> X SALADA </li> -->
               <!-- <li> SALGADO </li> -->
-              <!-- <li> BOLO </li> -->
+              <!-- <li> SALGADO </li> -->
+              <li> KIKÃO </li>
             </ul>
             </p>
           </div>
@@ -191,30 +195,32 @@
             </a>
             <h3>
               <a class="Proficional_Academico" target="_blank" href="#services">
-                29/12
+                05/01
               </a>
             </h3>
             <p>
             <P class="desjejum">DESJEJUM:</P>
             <ul>
               <li> PÃO FRANCÊS </li>
-              <li> MASSA FINA </li>
+              <li> PÃO MASSA FINA </li>
+              <li> CAFÉ / LEITE </li>
               <!-- <li> SOPA DE FEIJÃO </li> -->
               <!-- <li> QUEIJO E PRESUNTO </li> -->
               <!-- <li> BANANA COZIDA </li> -->
               <!-- <li> OVO FRITO </li> -->
-              <li> OVO COZIDO </li>
+              <!-- <li> OVO COZIDO </li> -->
+              <li> PATÊ </li>
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> BOLO </li> -->
-              <li> CAFÉ / LEITE </li>
             </ul>
             </p></br>
             <p>
             <P class="desjejum">ALMOÇO:</P>
             <ul>
               <!-- <li> BIFE ACEBOLADO </li> -->
-              <!-- <li> DOBRADINHA </li> -->
+              <li> DOBRADINHA </li>
               <!-- <li> PEIXE FRITO </li> -->
+              <li> FILE DE FRANGO FRITO </li>
               <!-- <li> PICADINHO RICO </li> -->
               <!-- <li> ISCA DE CARNE </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
@@ -223,8 +229,9 @@
               <!-- <li> FRANGO GUISADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
-              <li> ALMOÇO ESPECIAL </li>
-              <li> REFRIGERANTE </li>
+              <!-- <li> ALMOÇO ESPECIAL </li> -->
+              <!-- <li> REFRIGERANTE </li> -->
+              <li> SUCO </li>
             </ul>
             <p></br>
             <p>
@@ -232,9 +239,9 @@
             <ul>
               <!-- <li> BAQUETE </li> -->
               <!-- <li> MISTO QUENTE </li> -->
-              <!-- <li> SALGADO </li> -->
+              <li> SALGADO </li>
               <!-- <li> BOLO </li> -->
-              <li> MINGAU DE MUNGUNZA </li>
+              <!-- <li> MINGAU DE MUNGUNZA </li> -->
             </ul>
             </p>
           </div>
@@ -245,42 +252,46 @@
             </a>
             <h3>
               <a class="Proficional_Academico" target="_blank" href="#services">
-                30/12
+                06/01
               </a>
             </h3>
             <p>
             <P class="desjejum">DESJEJUM:</P>
             <ul>
               <li> PÃO FRANCÊS </li>
-              <li> MASSA FINA </li>
+              <li> PÃO MASSA FINA </li>
+              <li> CAFÉ / LEITE </li>
               <!-- <li> SOPA DE FEIJÃO </li> -->
               <!-- <li> QUEIJO E PRESUNTO </li> -->
               <!-- <li> BANANA COZIDA </li> -->
               <!-- <li> OVO FRITO </li> -->
-              <li> QUARENTÃO </li>
+              <!-- <li> QUARENTÃO </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> BOLO </li> -->
-              <li> CAFÉ / LEITE </li>
+              <li> TAPIOCA COM QUEIJO </li>
             </ul>
             </p></br>
             <p>
             <P class="desjejum">ALMOÇO:</P>
             <ul>
               <!-- <li> BIFE ACEBOLADO </li> -->
+              <li> LAZANHA DE CARNE </li>
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> PEIXE FRITO </li> -->
               <!-- <li> PICADINHO RICO </li> -->
               <!-- <li> ISCA DE CARNE </li> -->
-              <li> ISCA DE FRANGO </li>
-              <li> CARNE AO MOLHO </li>
+              <!-- <li> ISCA DE FRANGO </li> -->
+              <!-- <li> CARNE AO MOLHO </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> FRANGO GUISADO </li> -->
+              <li> FRANGO ASADO DE FORNO </li>
               <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> ALMOÇO ESPECIAL </li> -->
-              <li> SUCO </li>
+              <!-- <li> SUCO </li> -->
+              <li> REFRIGERANTE </li>
             </ul>
             <p></br>
             <p>
@@ -290,7 +301,8 @@
               <!-- <li> MISTO QUENTE </li> -->
               <!-- <li> SALGADO </li> -->
               <!-- <li> BOLO </li> -->
-              <li> BISCOITO RECHEADO </li>
+              <!-- <li> BISCOITO RECHEADO </li> -->
+              <li> AÇAÍ COM TAPIOCA </li>
             </ul>
             </p>
           </div>
@@ -301,22 +313,22 @@
             </a>
             <h3>
               <a class="Proficional_Academico" target="_blank" href="#services">
-                31/12
+                07/01
               </a>
             </h3>
             <p>
             <P class="desjejum">DESJEJUM:</P>
             <ul>
               <li> PÃO FRANCÊS </li>
-              <li> MASSA FINA </li>
+              <li> PÃO MASSA FINA </li>
+              <li> CAFÉ / LEITE </li>
               <!-- <li> SOPA DE FEIJÃO </li> -->
               <!-- <li> QUEIJO E PRESUNTO </li> -->
               <!-- <li> BANANA COZIDA </li> -->
               <!-- <li> OVO FRITO </li> -->
               <!-- <li> MOLHO DE SALSICHA </li> -->
-              <!-- <li> BOLO </li> -->
-              <li> FRUTA </li>
-              <li> CAFÉ / LEITE </li>
+              <li> BOLO </li>
+              <!-- <li> FRUTA </li> -->
             </ul>
             </p></br>
             <p>
@@ -326,14 +338,15 @@
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> PEIXE FRITO </li> -->
               <!-- <li> PICADINHO RICO </li> -->
-              <li> ISCA DE CARNE </li>
-              <li> LINGUIÇA DE FRANGO </li>
+              <!-- <li> ISCA DE CARNE </li> -->
+              <!-- <li> LINGUIÇA DE FRANGO </li> -->
               <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
-              <!-- <li> FRANGO GUISADO </li> -->
+              <li> FRANGO GUISADO </li>
               <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> ALMOÇO ESPECIAL </li> -->
+              <li> FARIFA DE CONSERVA </li>
               <li> SUCO </li>
             </ul>
             <p></br>
@@ -343,7 +356,8 @@
               <!-- <li> BAQUETE </li> -->
               <!-- <li> MISTO QUENTE </li> -->
               <!-- <li> SALGADO </li> -->
-              <li> BOLO </li>
+              <!-- <li> BOLO </li> -->
+              <li> BISCOITO </li>
             </ul>
             </p>
           </div>
@@ -355,39 +369,40 @@
 
             <h3>
               <a class="Proficional_Academico" target="_blank" href="#services">
-                01/01
+                08/01
               </a>
             </h3>
             <p>
             <P class="desjejum">DESJEJUM:</P>
             <ul>
               <li> PÃO FRANCÊS </li>
-              <li> MASSA FINA </li>
+              <li> PÃO MASSA FINA </li>
+              <li> CAFÉ / LEITE </li>
               <!-- <li> SOPA DE FEIJÃO </li> -->
               <!-- <li> QUEIJO E PRESUNTO </li> -->
               <!-- <li> BANANA COZIDA </li> -->
               <li> OVO FRITO </li>
               <!-- <li> MOLHO DE SALSICHA </li> -->
               <!-- <li> BOLO </li> -->
-              <li> CAFÉ / LEITE </li>
             </ul>
             </p></br>
             <p>
             <P class="desjejum">ALMOÇO:</P>
             <ul>
-              <!-- <li> BIFE ACEBOLADO </li> -->
+              <li> BIFE ACEBOLADO </li>
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> PEIXE FRITO </li> -->
               <!-- <li> PICADINHO RICO </li> -->
               <!-- <li> ISCA DE CARNE </li> -->
-              <li> ISCA DE FIGADO </li>
+              <!-- <li> ISCA DE FIGADO </li> -->
               <!-- <li> LINGUIÇA DE FRANGO </li> -->
-              <li> BIFE AO MOLHO </li>
+              <!-- <li> BIFE AO MOLHO </li> -->
               <!-- <li> ISCA DE CALABRESA </li> -->
               <!-- <li> FRANGO GUISADO </li> -->
               <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> ALMOÇO ESPECIAL </li> -->
+              <li> OVO FRITO </li>
               <li> SUCO </li>
             </ul>
             <p></br>
@@ -418,7 +433,7 @@
       <br/>
     </div>
   </footer>
-
+  <!-- by Marcell Ramos de Souza -->
   <script src="https://unpkg.com/scrollreveal"></script>
   <script src="./main.js"></script>
 </body>
