--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <p>
             <P class="desjejum">LANCHE:</P>
             <ul>
-              <li> BAQUETE </li>
+              <li> BAGUETE </li>
               <!-- <li> MISTO QUENTE </li> -->
               <!-- <li> SALGADO </li> -->
               <!-- <li> BOLO </li> -->
@@ -275,7 +275,7 @@
             <P class="desjejum">ALMOÇO:</P>
             <ul>
               <!-- <li> BIFE ACEBOLADO </li> -->
-              <li> LAZANHA DE CARNE </li>
+              <li> LASANHA DE CARNE </li>
               <!-- <li> DOBRADINHA </li> -->
               <!-- <li> PEIXE FRITO </li> -->
               <!-- <li> PICADINHO RICO </li> -->
@@ -346,7 +346,7 @@
               <!-- <li> FRANGO FRITO </li> -->
               <!-- <li> PANQUECAS DE CARNE </li> -->
               <!-- <li> ALMOÇO ESPECIAL </li> -->
-              <li> FARIFA DE CONSERVA </li>
+              <li> FAROFA DE CONSERVA </li>
               <li> SUCO </li>
             </ul>
             <p></br>
